# aerialcore_planning

./: .gitignore  README.md
aerialcore_msgs/: CMakeLists.txt  package.xml
aerialcore_msgs/msg/: Edge.msg  FlightPlan.msg  GraphNode.msg  HLCommandsList.msg  MissionState.msg
aerialcore_msgs/srv/: DoSpecificSupervision.srv  PostString.srv  SetWindVector.srv  StartSupervising.srv  StopSupervising.srv
human_aware_collaboration_planner/: CMakeLists.txt  Makefile  README.md  package.xml
human_aware_collaboration_planner/action/: BatteryEnough.action  NewTask.action  NewTaskList.action  TaskResult.action
human_aware_collaboration_planner/config/: conf.yaml
human_aware_collaboration_planner/include/human_aware_collaboration_planner/: agent_behaviour_manager.h  classes.h  high_level_planner.h
human_aware_collaboration_planner/launch/: agent.launch  battery_faker.launch  camera_experiment.launch  export_jpegs_from_bag.launch  fakers.launch  mavros_experiment.launch  mrs.launch  multimaster.launch  planner.launch  realsense.launch  rosbag_recorder_experiment.launch  simulation.launch  ual.launch  ual_experiment.launch  uav.launch  video_recorder.launch  world.launch
human_aware_collaboration_planner/msg/: AgentBeacon.msg  BatteryControl.msg  DeliverToolParams.msg  HumanTarget.msg  InspectParams.msg  MonitorParams.msg  MonitorUGVParams.msg  PlannerBeacon.msg  Position.msg  RechargeParams.msg  Task.msg  Tool.msg  Waypoint.msg
human_aware_collaboration_planner/scripts/: launch_gcs_ual.sh  launch_single_uav_ual.sh  launch_uavs_ual.sh  run_offline_mrs.sh  session_evora_gcs_ual.yml  session_evora_ual.yml  session_evora_uavs_ual.yml  start_multimaster.sh  start_ual.sh  start_uavs_ual.sh  start_uavs_ual.yml
human_aware_collaboration_planner/src/: agent_behaviour_manager.cpp  battery_faker.cpp  behaviour_tree.xml  classes.cpp  gesture_recognition_faker.cpp  high_level_planner.cpp  ist_ugv_faker.cpp
human_aware_collaboration_planner/src/lower_level_controllers/ual_controllers/: go_near_to.cpp
human_aware_collaboration_planner/tmux_scripts/five_drones_two_towers/: .gitignore  pos.csv  record.sh  rviz.rviz  session.yml  session_3UAVs.yml  session_single.yml  start_3UAVs.sh  start_single.sh
human_aware_collaboration_planner/tmux_scripts/five_drones_two_towers/custom_configs/: constraint_manager.yaml  drone_manager_uav1.yaml  drone_manager_uav2.yaml  drone_manager_uav3.yaml  drone_manager_uav4.yaml  drone_manager_uav5.yaml  mpc_tracker.yaml  odometry.yaml  tf_connector.yaml  uav_manager.yaml  virtual_object_visualizer_human_deli.yaml  virtual_object_visualizer_human_mon.yaml  virtual_object_visualizer_human_pick.yaml  virtual_object_visualizer_rs1.yaml  virtual_object_visualizer_rs2.yaml  virtual_object_visualizer_rs3.yaml  virtual_object_visualizer_rs4.yaml  virtual_object_visualizer_rs5.yaml  virtual_object_visualizer_tower.yaml  world.yaml
human_aware_collaboration_planner/tmux_scripts/five_drones_two_towers/trajectories/: trajectory_rotated_empty.csv  trajectory_rotated_uav1.csv  trajectory_rotated_uav2_1.csv  trajectory_rotated_uav2_2.csv  trajectory_rotated_uav3.csv  trajectory_rotated_uav4.csv  trajectory_rotated_uav4_home.csv  trajectory_rotated_uav5.csv  trajectory_rotated_uav5_home.csv
human_aware_collaboration_planner/tmux_scripts/mapping_and_collision_avoidance/: required_packages.txt  session.yml  start.sh
human_aware_collaboration_planner/tmux_scripts/mapping_and_collision_avoidance/custom_configs/: world.yaml
human_aware_collaboration_planner/tmux_scripts/minimal_mrs/: session.yml
human_aware_collaboration_planner/tmux_scripts/mrs/: required_packages.txt  session.yml
human_aware_collaboration_planner/tmux_scripts/mrs/custom_configs/: odometry.yaml
human_aware_collaboration_planner/tmux_scripts/mrs_actionlib_simulation/: pos.csv  session.yml
human_aware_collaboration_planner/tmux_scripts/no_mapping_no_collision_avoidance/: pos.yaml  session.yml
human_aware_collaboration_planner/tmux_scripts/no_mapping_no_collision_avoidance/custom_configs/: world.yaml
human_aware_collaboration_planner/tmux_scripts/simulaton/: session.yml
human_aware_collaboration_planner/tmux_scripts/two_drones/: pos.yaml  session.yml
human_aware_collaboration_planner/tmux_scripts/two_drones/custom_configs/: world.yaml
human_aware_collaboration_planner/tmux_scripts/two_drones_gps/: session.yml
ist_use_collaboration_msgs/: CMakeLists.txt  package.xml
ist_use_collaboration_msgs/action/: DoCloserInspection.action  RequestMobileChargingStation.action
ist_use_collaboration_msgs/config/: placemarks.yaml
large_scale_inspection_planner/: CMakeLists.txt  package.xml
large_scale_inspection_planner/cmake/: Findortools.cmake
large_scale_inspection_planner/config/: distance_cost_matrix.yaml  graph_setup_ATLAS_big.yaml  planner_setup_ATLAS.yaml  planner_setup_ATLAS_extended.yaml
large_scale_inspection_planner/include/: centralized_planner.h  matplotlibcpp.h  mission_controller.h  parameter_estimator.h  path_planner.h  plan_monitor.h
large_scale_inspection_planner/launch/: pydashboard.launch  simulate_full_system.launch  simulate_full_system_big.launch  simulate_full_system_extra_UAVs.launch
large_scale_inspection_planner/plans/: 01_waypoints_CTU_big_map.yaml  02_waypoints_example.yaml  03_MEM_full_battery.yaml  04_MEM_half_battery.yaml
large_scale_inspection_planner/scripts/: graph_dataset_and_plot.m  pydashboard.py  wires_and_pylons_for_simulation.m
large_scale_inspection_planner/src/: centralized_planner.cpp  mission_controller.cpp  parameter_estimator.cpp  path_planner.cpp  plan_monitor.cpp
large_scale_inspection_planner_challenge/: CMakeLists.txt  package.xml
large_scale_inspection_planner_challenge/config/: graph_setup.yaml  graph_setup_mini.yaml
large_scale_inspection_planner_challenge/include/: centralized_planner.h  mission_controller.h  path_planner.h
large_scale_inspection_planner_challenge/launch/: pydashboard.launch  simulate_full_system.launch  simulate_full_system_mini.launch
large_scale_inspection_planner_challenge/scripts/: pydashboard.py  (+2 more)
(+4 files in other folders)
