<?xml version="1.0"?>
<package format="2">

  <name>ist_use_collaboration_msgs</name>
  <version>1.0.0</version>
  <description>msgs used for the IST-USE collaboration</description>

  <maintainer email="acalvom@us.es">Álvaro Calvo Matos</maintainer>
  <author email="acalvom@us.es">Álvaro Calvo Matos</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_export_depend>message_runtime</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>


  <export>

  </export>

</package>
